--- a/about.html
+++ b/about.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <nav>
-	<li><a href="index.html">Home</a></li>
-	<li><a href="about.html">About</a></li>
-	<li><a><s>School</s></a></li>
+	<a href="index.html">Home</a>
+	<a href="about.html">About</a>
+	<a><s>School</s></a>
 	
 </nav>
 <h1>Educational Goals</h1>
