--- a/about.html
+++ b/about.html
@@ -2,27 +2,35 @@
 <html lang ="en">
 <head>
 	<meta charset="utf-8">
-<title>More Thing I Wrote</title>
+	<link rel="stylesheet" href="main.css">
+	<title>More Thing I Wrote</title>
 </head>
 <body>
+<header><h1>Big Title For Consistency With the Other Pages</h1></header>
 <nav>
+
 	<a href="index.html">Home</a>
 	<a href="about.html">About</a>
-	<a><s>School</s></a>
-	
+	<a href="school.html">School</a>
+
 </nav>
-<h1>Educational Goals</h1>
+<section>
+<h2>Educational Goals</h2>
 <ol>
 	<li>Take many coding classes and become smart</li>
 	<li>Read books and study instead of not studying (not confident)</li>
 	<li>Don't do assignments last minute (also not confident)</li>
 </ol>
-<h1>Skills</h1>
+<h2>Skills</h2>
 <ol>
   <li>Making food for myself</li>
   <li>Drawing on a phone screen</li>
   <li>I wear shorts in any weather</li> 
 </ol>
-<p>Last Updated Oct. 26</P>
+</section>
+<footer>
+<p>Last Updated Nov. 3</p>
+<a href = "mailto:cirnofumo@touhou.com?subject=Message"> Email Link </a>
+</footer>
 </body>
 </html>
