--- a/index.html
+++ b/index.html
@@ -2,23 +2,27 @@
 <html lang ="en">
 <head>
 	<meta charset="utf-8">
-<title>Thing I Wrote</title>
+	<link rel="stylesheet" href="main.css">
+	<title>Thing I Wrote</title>
 </head>
 <body>
+<header><h1>Mason Eugenio</h1></header>
 <nav>
+	
 	<a href="index.html">Home</a>
 	<a href="about.html">About</a>
-	<a><s>School</s></a>
+	<a href="school.html">School</a>
 	
 </nav>
-<h1>Mason Eugenio</h1>
+<section>
+<h2>About Me</h2>
 <p>My name is Mason Eugenio and I am 20 years old. 
 I am taking many computer science related classes online for my computer science degree. 
 I enjoy long walks on the beach (not really I just like staying indoors). 
 I like watching shows and reading stories online.
-So basically I stay indoors for most of the actifities I enjoy.
+So basically I stay indoors for most of the activities I enjoy.
 </p>
-<h1>Free Time Stuff</h1>
+<h2>Free Time Stuff</h2>
 <ol>
   <li>Drawing something I want to draw</li>
   <li>Video games</li>
@@ -26,6 +30,10 @@ So basically I stay indoors for most of the actifities I enjoy.
 </ol>  
 <p>I love <a href="https://www.youtube.com/">Youtube</a> because it is Youtube. There's a 
 lot of videos of any interest you want on there.</p>
-<p>Last Updated Oct. 26</p>
+</section>
+<footer>
+<p>Last Updated Nov. 3</p>
+<a href = "mailto:cirnofumo@touhou.com?subject=Message"> Email Link </a>
+</footer>
 </body>
 </html>
