--- a/about.html
+++ b/about.html
@@ -6,31 +6,39 @@
 	<title>More Thing I Wrote</title>
 </head>
 <body>
-<header><h1>Big Title For Consistency With the Other Pages</h1></header>
-<nav>
-
-	<a href="index.html">Home</a>
-	<a href="about.html">About</a>
-	<a href="school.html">School</a>
-
-</nav>
-<section>
-<h2>Educational Goals</h2>
-<ol>
-	<li>Take many coding classes and become smart</li>
-	<li>Read books and study instead of not studying (not confident)</li>
-	<li>Don't do assignments last minute (also not confident)</li>
-</ol>
-<h2>Skills</h2>
-<ol>
-  <li>Making food for myself</li>
-  <li>Drawing on a phone screen</li>
-  <li>I wear shorts in any weather</li> 
-</ol>
-</section>
-<footer>
-<p>Last Updated Nov. 3</p>
-<a href = "mailto:cirnofumo@touhou.com?subject=Message"> Email Link </a>
-</footer>
+	<header><h1>Mason Eugenio</h1></header>
+	
+	<nav>
+		<a href="index.html">Home</a>
+		<a id="current" href="about.html"><b>About</b></a>
+		<a href="secret.html">Secret</a>
+	</nav>
+	
+	<p id="space">:D</p>
+	
+	<section id="leftColumn">
+		<h2>Educational Goals</h2>
+		<ol>
+			<li>Take many coding classes and become smart</li>
+			<li>Read books and study instead of not studying (not confident)</li>
+			<li>Don't do assignments last minute (also not confident)</li>
+		</ol>
+	</section>
+	
+	<section id="rightColumn">
+		<h2>Skills</h2>
+		<ol>
+		  <li>Making food for myself</li>
+		  <li>Drawing on a phone screen</li>
+		  <li>I wear shorts in any weather</li> 
+		</ol>
+	</section>
+	
+	<footer>
+	<br>
+		<p>Last Updated Nov. 11</p>
+		<a href = "mailto:cirnofumo@touhou.com?subject=Message"> Email Link </a>
+	</footer>
+	<br>
 </body>
 </html>
