--- a/index.html
+++ b/index.html
@@ -6,34 +6,41 @@
 	<title>Thing I Wrote</title>
 </head>
 <body>
-<header><h1>Mason Eugenio</h1></header>
-<nav>
+	<header><h1>Mason Eugenio</h1></header>
 	
-	<a href="index.html">Home</a>
-	<a href="about.html">About</a>
-	<a href="school.html">School</a>
+	<nav>
+		<a id="current" href="index.html"><b>Home</b></a>
+		<a href="about.html">About</a>
+		<a href="secret.html">Secret</a>
+	</nav>
+	<!-- I couldn't figure out how to add a space between the navigation and the section so here's some invisible text-->
+	<p id="space">:D</p>
 	
-</nav>
-<section>
-<h2>About Me</h2>
-<p>My name is Mason Eugenio and I am 20 years old. 
-I am taking many computer science related classes online for my computer science degree. 
-I enjoy long walks on the beach (not really I just like staying indoors). 
-I like watching shows and reading stories online.
-So basically I stay indoors for most of the activities I enjoy.
-</p>
-<h2>Free Time Stuff</h2>
-<ol>
-  <li>Drawing something I want to draw</li>
-  <li>Video games</li>
-  <li>Reading stories</li>
-</ol>  
-<p>I love <a href="https://www.youtube.com/">Youtube</a> because it is Youtube. There's a 
-lot of videos of any interest you want on there.</p>
-</section>
-<footer>
-<p>Last Updated Nov. 3</p>
-<a href = "mailto:cirnofumo@touhou.com?subject=Message"> Email Link </a>
-</footer>
+	<section id="leftColumn">
+		<h2>About Me</h2>
+		<p>My name is Mason Eugenio and I am 20 years old. 
+		I am taking many computer science related classes online for my computer science degree. 
+		I enjoy long walks on the beach (not really I just like staying indoors). 
+		I like watching shows and reading stories online.
+		So basically I stay indoors for most of the activities I enjoy.</p>
+	</section>
+	
+	<section id="rightColumn">
+		<h2>Free Time Stuff</h2>
+			<ol>
+			  <li>Drawing something I want to draw</li>
+			  <li>Video games</li>
+			  <li>Reading stories</li>
+			</ol>  
+			<p>I love <a href="https://www.youtube.com/">Youtube</a> because it is Youtube. There's a 
+			lot of videos of any interest you want on there.</p>
+	</section>
+	
+	<footer>	
+		<br>
+		<p>Last Updated Nov. 11</p>
+		<a href = "mailto:cirnofumo@touhou.com?subject=Message"> Email Link </a>
+	</footer>
+	<br>
 </body>
 </html>
