--- a/secret.html
+++ b/secret.html
@@ -16,7 +16,7 @@
 	
 	<p id="space">:D</p>
 	
-	<h1><strong>NOT PLACEHOLDER TEXT</strong></h1>
+	<h1><strong>RELEVANT CONTENT</strong></h1>
 	
 	<section id="leftColumn">
 		<h2 id="new">CIRNO FUMO????? <br> IN WINDOWS XP?????</h2>
