--- a/secret.html
+++ b/secret.html
@@ -16,21 +16,22 @@
 	
 	<p id="space">:D</p>
 	
-	<h1><strong>RELEVANT CONTENT</strong></h1>
+
 	
 	<section id="leftColumn">
 		<h2 id="new">CIRNO FUMO????? <br> IN WINDOWS XP?????</h2>
+		<p>Gifs are just moving images. :)</p>
 		<img src="https://media.tenor.com/7KSFmJahD_0AAAAi/cirsnap.gif" alt="Amazing Gif">
 		<img src="https://media.tenor.com/qv9AZ2UJkCAAAAAj/funky-cirno.gif" alt="Funky">
-		<br>
-		<br>
-		<br>
-		<img src="https://media.tenor.com/DAAQXWcreF4AAAAC/cirno-cirno-fumo.gif" alt="Hehe">
+		<img src="https://media.tenor.com/xV0aRo6wSi4AAAAC/cirno-cirno-fumo.gif" alt="Hehe">
+
 	</section>
 	
 	<section id="rightColumn">
-		<h2 id="new2">Wow look at me I can break the walls! <br>:)</h2>
-		<img src="https://media.tenor.com/q810e9mGC80AAAAi/touhou-fumo.gif" alt="IDK">
+	<h2><strong>RELEVANT CONTENT</strong></h2>
+		<h2 id="new2">Wow look at me I can break through the wall! <br>:)</h2>
+
+		<img src="https://media.tenor.com/q810e9mGC80AAAAi/touhou-fumo.gif" alt="Wowzers">
 	</section>
 	
 	<footer>
