--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<header><h1>Mason Eugenio</h1></header>
-	
+	<!--Not formatted with list because it kept ruining the centering of the horizontal nav-->
 	<nav>
 		<a href="index.html">Home</a>
 		<a id="current" href="about.html"><b>About</b></a>
